# sailraceiq

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  compose.dev.yaml  compose.prod.yaml  compose.yaml
.github/ISSUE_TEMPLATE/: 🐛-bug-report.md  🚀-feature-request.md
backend/: README.md  compose.yaml  dockerfile  local.db  pyproject.toml
backend/src/server/: main.py  seed.py
backend/src/server/api/: regattas.py
backend/src/server/core/: db.py
backend/src/server/crud/: base.py  regatta.py
backend/src/server/models/: __init__.py  race_model.py  regatta.py
backend/src/server/routes/: regatta.py
backend/src/server/schemas/: regatta.py
infra/: .terraform.lock.hcl  main.tf  networking.tf  provider.tf  rds.tf  terraform.tf
mobile/: pubspec.yaml
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: home_page.dart  main.dart  theme.dart  timer_page.dart
mobile/lib/models/: regatta_model.dart
mobile/lib/pages/: home_page.dart  regatta_page.dart
mobile/lib/util/: colors.dart  endpoints.dart  helpers.dart  mock_api.dart  routes.dart  themes.dart
mobile/lib/widgets/: build_appbar.dart  default_drawer.dart
server/: .dockerignore  README.md  atlas.hcl  compose.yaml  dockerfile  dockerfile-app  dockerfile-atlas  dockerfile-db  init_schema.sql  pyproject.toml  schema.pg.hcl
server/alembic/: env.py
server/migrations/: 20250602201356.sql  20250602201613.sql  atlas.sum
server/src/server/: db-tasks.py  db.py
server/src/server/models/: __init__.py  race_model.py  regatta_model.py
(+1 files in other folders)
