[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Jack Rutherford",email = "jackcrutherford41@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "alembic (>=1.17.1,<2.0.0)",
    "pydantic (>=2.12.3,<3.0.0)",
]

[tool.poetry]
packages = [{include = "server", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
